--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  top: 0px;
+  left: 0px;
+  width: 1920px;
+  height: 1080px;
+  background-color: #72a1bf 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+label{
+  color: #A5C0D1;
 }
 
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.card {
+  top: 205px;
+  left: auto;
+  width: auto;
+  height: 670px;
+  background: #074770 0% 0% no-repeat padding-box;
+  border-radius: 36px;
+  opacity: 1;
+}
+
+.map {
+  width: 400px;
+  height: 500px;
+  float: right;
+  border-radius: 0px 0px 36px 0px;
+  opacity: 1;
+  position: relative;
+  margin: 0 auto;
+}
+
+.grid-container {
+  top: 100px;
+  display: grid;
+  grid-template-columns: 60% 30%;
+  grid-template-rows: 100px 100px;
+  width: 70%; 
+}
+.col-3 {
+  float: left;
+}
+.table {
+  position: absolute;
+}
+
